Did some work. [0]

--- a/source/_data/tags.yml
+++ b/source/_data/tags.yml
@@ -1,30 +1,88 @@
 ---
+adam-savage:
+  name: Adam Savage
 apple:
   name: Apple
+barenaked-ladies:
+  name: Barenaked Ladies
+beastie-boys:
+  name: Beastie Boys
 brutal-design:
   name: Brutal Design
   wikipedia: https://en.wikipedia.org/wiki/Brutalist_architecture
 canada:
   name: Canada
+casl:
+  addr: CASL
+  name: Canada's Anti-Spam Legislation
 chip:
   name: C.H.I.P.
+cleopatras-pool:
+  name: Cleopatra's Pool
+community:
+  name: Community
+complicated:
+  name: Complicated
+couchdb:
+  name: Apache CouchDB
 css:
   abbr: CSS
   name: Cascading Style Sheets
+daft-punk:
+  name: Daft Punk
+dancing:
+  name: Dancing
 database:
   name: Database
 death-cab-for-cutie:
   name: Death Cab for Cutie
   wikipedia: https://en.wikipedia.org/wiki/Death_Cab_for_Cutie
+delicious:
+  name: Del.icio.us
+design:
+  name: Design
 devops:
   name: DevOps
   wikipedia: https://en.wikipedia.org/wiki/DevOps
+django:
+  name: Django
+django-basic-tumblelog:
+  name: Django Basic Tumblelog
+django-quiz:
+  name: Django Quiz
+docker:
+  name: Docker
+failure:
+  name: Failure
+feed:
+  name: Feed
+fingerprints:
+  name: Fingerprints
+google-app-engine:
+  name: Google App Engine
 gtalug:
   name: GTALUG
   title: Greater Toronto Area Linux User Group
+hierapolis:
+  location:
+    lat: 37.925
+    lon: 29.125833
+  name: Hierapolis
 html:
   abbr: HTML
   name: HyperText Markup Language
+html5:
+  name: HTML5
+iaas:
+  name: IaaS
+  title: Infrastructure as a Service
+infosec:
+  name: InfoSec
+  title: Information security
+ios:
+  name: iOS
+ipad:
+  name: iPad
 ipod:
   name: iPod
 jabber:
@@ -35,18 +93,39 @@ js:
   name: Javascript
 json:
   name: JSON
+longboard:
+  name: Longboard
 lorem-ipsum:
   name: Lorem Ipsum
+minecraft:
+  name: Minecraft
 music:
   name: Music
+music-video:
+  name: Music Video
+obsessions:
+  name: Obsessions
+oglf:
+  name: Ontario [GNU] Linux Fest
 ontario:
   name: Ontario
   parent: canada
   title: Ontario, Canada
+paas:
+  name: PaaS
+  title: Platform as a Service
+password:
+  name: Password
 photography:
   name: Photography
 postgres:
   name: Postgres
+programming:
+  name: Programming
+project:
+  name: Project
+pycon:
+  name: PyCon
 pyconca:
   name: PyConCA
   title: PyCon Canada
@@ -62,10 +141,23 @@ python:
 r:
   name: R
   title: R (programming language)
+remix:
+  name: Remix
+saas:
+  name: SaaS
+  title: Software as a Service
+skateboarding:
+  name: Skateboarding
+snippets:
+  name: Snippets
 snowboarding:
   name: Snowboarding
 steve-jobs:
   name: Steve Jobs
+swift:
+  name: Swift
+talk:
+  name: Talk
 toronto:
   location:
     lat: 43.7
@@ -73,11 +165,22 @@ toronto:
   name: Toronto
   parent: ontario
   title: Toronto, Ontario, Canada
+turkey:
+  name: Turkey
+twitter:
+  name: Twitter
+ui:
+  addr: UI
+  name: User interface
 ux:
   abbr: UX
   name: User experience
+video-games:
+  name: Video Games
 wakeboarding:
   name: Wakeboarding
+wakesakting:
+  name: Wakesakting
 web-design:
   name: Web Design
 xmpp:
