Did a bunch fo stuff. [0]

--- a/source/_data/categories.yml
+++ b/source/_data/categories.yml
@@ -6,5 +6,11 @@
 - name: Bookmarks
   url: /bookmark/
 
+- name: Lists
+  url: /list/
+
+- name: Quotes
+  url: /quote/
+
 - name: Simple
   url: /simple/
