--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "old-fashioned": "https://github.com/myles/old-fashioned.git",
     "jquery": "^3.1.1",
-    "jquery-validation": "^1.15.1"
+    "jquery-validation": "^1.15.1",
+    "moment": "^2.17.0",
+    "handlebars": "^4.0.5"
   }
 }
