--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "mylesbraithwaite.com-www",
   "dependencies": {
-    "old-fashioned": "https://github.com/myles/old-fashioned.git",
+    "handlebars": "^4.0.5",
     "jquery": "^3.1.1",
     "jquery-validation": "^1.15.1",
     "moment": "^2.17.0",
-    "handlebars": "^4.0.5"
+    "old-fashioned": "https://github.com/myles/old-fashioned.git"
   }
 }
