Did to much work to write a good commit message. [0]

--- a/config/base.yml
+++ b/config/base.yml
@@ -10,6 +10,7 @@ gems:
   - jekyll-archives
   - jekyll-paginate
   - jekyll-typogrify
+  - jekyll-picture-tag
   - jekyll-time-to-read
 
 # URL Settings
