--- a/config/prod.yml
+++ b/config/prod.yml
@@ -4,6 +4,7 @@
 url: https://mylesbraithwaite.com
 baseurl: ""
 upload_url: https://mylesbraithwaite.com/uploads
+onion_url: http://tdm76lx3jweaozkd.onion
 
 # Contact Form
 raven_key: TODO
