--- a/source/_data/colophon.yml
+++ b/source/_data/colophon.yml
@@ -1,4 +1,5 @@
 ---
+
 runs_on:
   name: Digital Ocean
   url: https://m.do.co/c/49fe49034593
@@ -8,6 +9,8 @@ powered_by:
   url: https://jekyllrb.com/
 
 tools_used:
+  - name: Adobe Illustrator
+  - name: Adobe Photoshop
   - name: Affinity Designer
     url: https://affinity.serif.com/en-gb/designer/
   - name: Atom
