--- a/source/_data/tags.yml
+++ b/source/_data/tags.yml
@@ -1,4 +1,10 @@
 ---
+android:
+  name: Android
+web-view:
+  name: WebView
+mobile-development:
+  name: Mobile Development
 1password:
   name: 1Password
 adam-savage:
