--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "moment": "latest",
     "old-fashioned": "https://github.com/myles/old-fashioned.git",
     "picturefill": "latest",
-    "html5shiv": "latest"
+    "html5shiv": "latest",
+    "list.js": "^1.3.0"
   }
 }
