--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "list.js": "^1.3.0",
     "moment": "latest",
     "old-fashioned": "https://github.com/myles/old-fashioned.git",
-    "picturefill": "latest"
+    "picturefill": "latest",
+    "lightbox2": "^2.9.0"
   }
 }
