--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "html5shiv": "latest",
     "jquery": "latest",
     "jquery-validation": "latest",
-    "list.js": "^1.3.0",
+    "list.js": "latest",
     "moment": "latest",
     "old-fashioned": "https://github.com/myles/old-fashioned.git",
     "picturefill": "latest",
