:memo: Added a new bookmark.
Signed-off-by: Myles Braithwaite <me@mylesbraithwaite.com>

--- a/source/_data/tags.yml
+++ b/source/_data/tags.yml
@@ -1,4 +1,9 @@
 ---
+facebook:
+  name: Facebook
+computer-vision:
+  name: Computer Vision
+  wikipedia: https://en.wikipedia.org/wiki/Computer_vision
 1password:
   name: 1Password
 adam-savage:
