:lipstick: Did some more work on the living style guide.

--- a/config/base.yml
+++ b/config/base.yml
@@ -113,7 +113,13 @@ defaults:
       path: _wiki
       type: wiki
     values:
-      layout: wiki
+      layout: page_wiki
+
+  - scope:
+      path: _style
+      type: style
+    values:
+      layout: page_style
 
 # HTML Compression
 compress_html:
